# foga

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  RELEASING.md  REMAINING_PLAN.md  mkdocs.yml  pyproject.toml  run-example.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: cli.md  conf.py  development.md  getting-started.md  index.md
docs/configuration/: backends.md  index.md  profiles-and-hooks.md  top-level.md
docs/examples/: arrow.md  index.md  numpy.md  pybind11.md  qupled.md  tutorials.md
examples/: README.md
examples/arrow/: Dockerfile  README.md  foga.yml  run-in-docker.py
examples/numpy/: Dockerfile  README.md  foga.yml  run-in-docker.py
examples/pybind11/: Dockerfile  README.md  foga.yml  run-foga  run-in-docker.py
examples/qupled/: README.md  devkit.yml  foga.yml
examples/tutorial/: README.md  run-tutorial.py
examples/tutorial/01-python-only/: Dockerfile  README.md  example-instructions.md  foga.yml  pyproject.toml  run-example.sh  run-foga  run_example.py
examples/tutorial/01-python-only/src/vector_demo/: __init__.py  __main__.py
examples/tutorial/01-python-only/tests/: test_vector_demo.py
examples/tutorial/02-pybind11-hello/: CMakeLists.txt  Dockerfile  README.md  example-instructions.md  foga.yml  pyproject.toml  run-example.sh  run-foga  run_example.py
examples/tutorial/02-pybind11-hello/cpp/: CMakeLists.txt
examples/tutorial/02-pybind11-hello/cpp/include/hello_core/: greeting.hpp
examples/tutorial/03-pybind11-tests/: CMakeLists.txt  Dockerfile  README.md  example-instructions.md  foga.yml  pyproject.toml  run-example.sh  run-foga  run_example.py
examples/tutorial/03-pybind11-tests/build-cpp/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cli
examples/tutorial/03-pybind11-tests/build-cpp-tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cpp_tests
examples/tutorial/03-pybind11-tests/build-cpp-tests/Testing/Temporary/: CTestCostData.txt
examples/tutorial/03-pybind11-tests/build-wheel/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  build.ninja  cmake_install.cmake  install_manifest.txt
examples/tutorial/03-pybind11-tests/build-wheel/.cmake/api/v1/reply/: cache-v2-8da398350bb0d30447ea.json  cmakeFiles-v1-02ba4fb66caedddc3f00.json  codemodel-v2-4c4efa2e34fa8e88730c.json  directory-.-Release-3ce548545a98c59b3d07.json  index-2026-04-17T19-14-01-0566.json  target-_core-Release-5fe48a91bb61fa6dba6b.json  target-hello_core-Release-22aad1b52f2c15659420.json
examples/tutorial/03-pybind11-tests/cpp/: CMakeLists.txt
examples/tutorial/03-pybind11-tests/cpp/tests/: test_greeting.cpp
examples/tutorial/03-pybind11-tests/src/hello_bindings/: __init__.py  bindings.cpp
examples/tutorial/03-pybind11-tests/tests/: test_hello_bindings.py
examples/tutorial/04-pybind11-profiles/: CMakeLists.txt  Dockerfile  README.md  example-instructions.md  foga.yml  pyproject.toml  run-example.sh  run-foga  run_example.py
examples/tutorial/04-pybind11-profiles/build-cpp-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cli
examples/tutorial/04-pybind11-profiles/build-cpp-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cli
examples/tutorial/04-pybind11-profiles/build-cpp-tests-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cpp_tests
examples/tutorial/04-pybind11-profiles/build-cpp-tests-debug/Testing/Temporary/: CTestCostData.txt
examples/tutorial/04-pybind11-profiles/build-cpp-tests-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  hello_cpp_tests
examples/tutorial/04-pybind11-profiles/build-cpp-tests-release/Testing/Temporary/: CTestCostData.txt
examples/tutorial/04-pybind11-profiles/build-wheel/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  build.ninja  cmake_install.cmake  install_manifest.txt
examples/tutorial/04-pybind11-profiles/build-wheel/.cmake/api/v1/reply/: cache-v2-197cecde7500d9096578.json  cmakeFiles-v1-1f6cbce9149fccb8f21b.json  codemodel-v2-2c2a86d8253a0cb9e1d4.json  index-2026-04-17T19-14-25-0575.json  target-_core-Release-2f0abf986e23fec1c516.json  target-hello_core-Release-30ad46c58dc8fdf298bc.json  toolchains-v1-d4ce1056903d6a4151e2.json
examples/tutorial/04-pybind11-profiles/cpp/: CMakeLists.txt
examples/tutorial/04-pybind11-profiles/cpp/app/: main.cpp
examples/tutorial/04-pybind11-profiles/cpp/src/: greeting.cpp
examples/tutorial/04-pybind11-profiles/cpp/tests/: test_greeting.cpp
examples/tutorial/04-pybind11-profiles/src/hello_bindings/: __init__.py  bindings.cpp
examples/tutorial/04-pybind11-profiles/tests/: test_hello_bindings.py
skills/devkit-config-authoring/: SKILL.md
skills/devkit-config-authoring/agents/: openai.yaml
skills/devkit-config-authoring/references/: checklist.md
skills/foga-blueprint/: SKILL.md
skills/foga-blueprint/agents/: openai.yaml
skills/foga-config-authoring/: SKILL.md
skills/foga-config-authoring/references/: checklist.md
skills/github-issue-workflow/: SKILL.md
skills/github-issue-workflow/agents/: openai.yaml
skills/pr-review-loop/: SKILL.md
skills/python-development/: SKILL.md
src/devkit/: cli.py  config.py  config_merge.py  errors.py  executor.py  inspect.py  output.py
src/devkit/cli/: app.py  (+8 more)
src/foga/: __init__.py  errors.py  example_runner.py  executor.py  output.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_example_runner.py  test_examples.py  test_executor.py  test_inspect.py  test_output.py
(+69 files in other folders)
