[build-system]
requires = [
    "pybind11>=2.13",
    "scikit-build-core>=0.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "hello-bindings-profiled"
version = "0.1.0"
description = "Profiled pybind11 tutorial example for foga."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.scikit-build]
build-dir = "build-wheel"
wheel.packages = ["src/hello_bindings"]

[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"
